fixed divider errors on small mobile devices

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -76,7 +76,7 @@ body{
   background-color: #000000;
   border: none;
   border-radius: 50px;
-  width: 200px;
+  width: 150px;
   margin-top: -7px;
 }
 
